{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "e5726363-79b8-4c0c-9bbd-986c24ecf823",
            "actions": [
                {
                    "name": "PositionPointeur",
                    "type": "Value",
                    "id": "997ba091-729f-49ac-8036-101a0015de68",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Placer",
                    "type": "Button",
                    "id": "9a9eb3f8-a700-4ab9-a11c-600a9ccf36b7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Supprimer",
                    "type": "Button",
                    "id": "3255dce1-1c89-4518-9f42-1cf796fb3556",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Couleur1",
                    "type": "Button",
                    "id": "a445a4c2-3387-427c-b487-506df4611b1e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Couleur2",
                    "type": "Button",
                    "id": "4c5f0954-bb56-44bd-b6d0-3c0d3a32ac52",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Couleur3",
                    "type": "Button",
                    "id": "d4875bc2-c9d4-4966-b5ef-dcd1fe9ac9d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Couleur4",
                    "type": "Button",
                    "id": "3d3bbbe4-65fb-40be-8368-64dc5d5a40af",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Couleur5",
                    "type": "Button",
                    "id": "400f61bb-c268-48db-b9f9-5a0596fe12c6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e27131df-159b-479d-b110-0862a3cc7a0b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PositionPointeur",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7aaaaa7-1c8c-480d-bbf0-e73b17c4682f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Placer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8f887ec-930b-4652-aaa0-bc6667b64399",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Supprimer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d058fdb0-9ec5-4754-afa6-d18907ab6329",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Couleur1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a47e9aa5-54e1-4f0b-b038-01f54b08ff08",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Couleur2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96381a96-6ac6-4eb2-b83f-36807972714a",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Couleur3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "563b70e0-5ee1-45be-b5ee-a931619a9f5a",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Couleur4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68ac6dc2-5628-4c1f-be0e-c0a8e1e5890c",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Couleur5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}